# codenames-llm-marl

./: .env.example  README.md  pyproject.toml  zaer.json
configs/: vocabulary_en.txt  vocabulary_fr.txt  wordlist.txt  wordlist_fr.txt
doc/: APPLE_SILICON.md  CODENAMES_RULES_SUMMARY.md  GET_LLM.md  PLAN.md
scripts/: check_prompt_length.py  compare_embedding_models.py  compare_improved.py  debug_llm_prompt.py  download_and_test_llm.py  run_eval.py  run_eval_adversarial.py  test_llm_functionality.py  train_adversarial_selfplay.py
src/codenames_rl/agents/: README.md  __init__.py  baselines.py  improved.py
src/codenames_rl/app/: __init__.py  app.py
src/codenames_rl/eval/: __init__.py  harness.py  metrics.py
src/codenames_rl/utils/: config.py
tests/: conftest.py
tests/integration/: test_cross_encoder.py  test_llm_functionality.py  test_qwen_embedding.py  test_qwen_integration.py
tests/unit/: test_adversarial.py  test_agent_compatibility.py  test_baselines.py  test_env.py  test_eval.py  test_qwen_embedding.py  test_qwen_embedding_agents.py
